--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ codex32 = "0.1.0"
 env_logger = "0.10.0"
 home = "0.5.5"
 log = "0.4.19"
+qr_code = "2.0.0"
 thiserror = "1.0.40"
 
 [dev-dependencies]
 rand = "0.8.5"
 tempfile = "3.8"
+bech32 = "0.9.1"
