--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bip39 = "2.0.0"
 bitcoin = { version = "0.30.0", features = ["base64"] }
 bitcoind = "0.32.0"
 clap = { version = "4.3.5", features = ["derive", "env"] }
+clap_complete = "4.4.1"
 codex32 = "0.1.0"
 env_logger = "0.10.0"
 home = "0.5.5"
