--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 age = { version = "0.9.2", features = ["armor"] }
+bech32 = "0.9.1"
 bip39 = "2.0.0"
 bitcoin = { version = "0.30.0", features = ["base64"] }
 bitcoind = "0.32.0"
@@ -20,4 +21,8 @@ thiserror = "1.0.40"
 [dev-dependencies]
 rand = "0.8.5"
 tempfile = "3.8"
-bech32 = "0.9.1"
+
+
+# Set the default for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
