--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ codex32 = "0.1.0"
 env_logger = "0.10.0"
 home = "0.5.5"
 log = "0.4.19"
+miniscript = "10.0.0"
 qr_code = "2.0.0"
 thiserror = "1.0.40"
 
