--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 age = { version = "0.9.2", features = ["armor"] }
+anyhow = "1.0.75"
 bech32 = "0.9.1"
 bip39 = "2.0.0"
 bitcoin = { version = "0.30.0", features = ["base64"] }
