--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ home = "0.5.5"
 log = "0.4.19"
 miniscript = "10.0.0"
 qr_code = "2.0.0"
+serde = { version = "1.0.190", features = ["derive"] }
 thiserror = "1.0.40"
 
 [dev-dependencies]
